testdata/golden/sema/valid/entrypoint/no_mode_no_params.sg
// Test: @entrypoint without mode and no parameters is valid
@entrypoint
fn main() {
}
