testdata/golden/sema/invalid/attrs_nonblocking_waits_on_conflict/only.sg
// Test: @nonblocking and @waits_on conflict on function

@nonblocking
@waits_on("cond")
fn conflicting_attrs() {
}
